--- a/10.TODO-App/src/App.css
+++ b/10.TODO-App/src/App.css
@@ -5,7 +5,6 @@
   justify-content: center;
 }
 
-/* İçeriği dikeyde de hizalayan kutu */
 .todo-create {
   display: flex;
   flex-direction: column;
@@ -34,4 +33,9 @@
   background-color: rgb(8, 204, 50);
   font-weight: 700;
   cursor: pointer;
+}
+
+.todo-icons {
+  font-size: 25px;
+
 }
