--- a/10.TODO-App/src/App.css
+++ b/10.TODO-App/src/App.css
@@ -39,3 +39,12 @@
   font-size: 25px;
 
 }
+
+.main {
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+}
